--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "install": "node-gyp rebuild"
   }
   , "dependencies": {
-    "bindings": "*"
+    "bindings": "*",
     "coffee-script": "*"
   },
   "author": "D1plo1d",
